--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 		"shadow-cljs": "2.11.18"
 	},
 	"dependencies": {
-		"@material-ui/core": "^4.11.3",
+		"@material-ui/core": "4.11.3",
+		"@material-ui/data-grid": "^4.0.0-alpha.20",
 		"highlight.js": "9.18.1",
 		"react": "^17.0.1",
 		"react-dom": "17.0.1",
