--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"dependencies": {
 		"@material-ui/core": "4.11.3",
 		"@material-ui/data-grid": "^4.0.0-alpha.20",
+		"@material-ui/icons": "^4.11.2",
 		"highlight.js": "9.18.1",
 		"react": "^17.0.1",
 		"react-dom": "17.0.1",
